--- a/locale/en_US/LC_MESSAGES/application.po
+++ b/locale/en_US/LC_MESSAGES/application.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-11-18 13:35+0100\n"
-"PO-Revision-Date: 2020-11-18 13:37+0100\n"
+"PO-Revision-Date: 2021-02-18 15:09+0100\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 2.3\n"
 
 msgid "Nahoru"
 msgstr "Top"
@@ -1320,7 +1320,7 @@ msgstr "Categories"
 
 #: ../app/controllers/checkouts_controller.php:5
 msgid "Shipping and payment method"
-msgstr "Categories"
+msgstr "Shipping and payment method"
 
 #: ../app/controllers/checkouts_controller.php:25
 msgid "Přihlášení uživatele"
