--- a/locale/en_US/LC_MESSAGES/vendor.po
+++ b/locale/en_US/LC_MESSAGES/vendor.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-07-28 15:46+0200\n"
-"PO-Revision-Date: 2021-07-28 16:03+0200\n"
+"POT-Creation-Date: 2021-08-25 11:38+0200\n"
+"PO-Revision-Date: 2021-08-25 11:57+0200\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: \n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../vendor/atk14/async-file-field/src/app/controllers/api/temporary_file_uploads_controller.php:36
 msgid "Temporary file uploading is not enabled"
@@ -113,6 +113,28 @@ msgstr ""
 "Ensure this number has at most %max% decimal places (it has %decimal_places"
 "%)."
 
+#: ../vendor/atk14/hcaptcha-field/src/app/fields/hcaptcha_field.php:8
+#: ../vendor/atk14/recaptcha-field/src/app/fields/recaptcha_field.php:11
+msgid ""
+"Please try to solve the test. It is important for us to be sure that we are "
+"communicating with a human."
+msgstr ""
+"Please try to solve the test. It is important for us to be sure that we are "
+"communicating with a human."
+
+#: ../vendor/atk14/hcaptcha-field/src/app/fields/hcaptcha_field.php:9
+#: ../vendor/atk14/recaptcha-field/src/app/fields/recaptcha_field.php:12
+msgid "The test was not successful. Please try it again."
+msgstr "The test was not successful. Please try it again."
+
+#: ../vendor/atk14/hcaptcha-field/src/app/fields/hcaptcha_field.php:10
+msgid ""
+"We are experiencing some technical issue during the communication with an "
+"captcha API. Please try it later."
+msgstr ""
+"We are experiencing some technical issue during the communication with an "
+"captcha API. Please try it later."
+
 #: ../vendor/atk14/mail-panel/src/MailPanel.php:44
 msgid "Headers"
 msgstr "Headers"
@@ -187,18 +209,6 @@ msgstr "from"
 #: ../vendor/atk14/range-field/src/app/widgets/range_input.php:51
 msgid "do"
 msgstr "to"
-
-#: ../vendor/atk14/recaptcha-field/src/app/fields/recaptcha_field.php:11
-msgid ""
-"Please try to solve the test. It is important for us to be sure that we are "
-"communicating with a human."
-msgstr ""
-"Please try to solve the test. It is important for us to be sure that we are "
-"communicating with a human."
-
-#: ../vendor/atk14/recaptcha-field/src/app/fields/recaptcha_field.php:12
-msgid "The test was not successful. Please try it again."
-msgstr "The test was not successful. Please try it again."
 
 #: ../vendor/atk14/recaptcha-field/src/app/fields/recaptcha_field.php:13
 msgid ""
